error and warn messages added in the apllication constants